<resources>
    <string name="app_name">UezoApp</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="preference_user_key">Preferences</string>
    <string name="preference_matricula">PrefMatricula</string>
    <string name="preference_password">PrefPassword</string>
    <string name="preference_save">PrefSave</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="login_code">Matrícula</string>
    <string name="password">Senha</string>
    <string name="login_automatically">Entrar automaticamente</string>
    <string name="save_password">Salvar senha</string>
    <string name="login">Logar</string>
    <string name="logo_uezo">Logo da Uezo</string>
    <string name="logo_app">Logo da Uezo</string>
    <string name="terms_and_conditios">Ao logar você aceita os Termos e Condições do aplicativo, leia com atenção!</string>

    <string name="dashboard_button_news">Notícias</string>
    <string name="dashboard_button_grades">Notas</string>
    <string name="dashboard_button_timetable">Horários</string>
    <string name="dashboard_button_bus">Uezobus</string>
    <string name="dashboard_button_groups">Grupos</string>
    <string name="dashboard_button_ranking">Ranking</string>
    <string name="dashboard_button_schedule">Grade</string>
    <string name="dashboard_button_requests">Requerimentos</string>
    <string name="dashboard_button_logout">Deslogar</string>

    <string name="dashboard_slider_news_title_1">Exemplo de Notícia 1</string>

    <string name="activity_horario_name">Horários</string>
    <string name="activity_boletim_name">Boletim</string>
    <string name="activity_dashboard_name">Dashboard</string>

    <string name="activity_filtros_description">Preferências do Feed de Notícias:</string>
    <string name="activity_filtros_check_all">Todas as Atividades</string>
    <string name="activity_filtros_item_1">UEZO</string>
    <string name="activity_filtros_item_2">Ciências Biológicas</string>
    <string name="activity_filtros_item_3">Tecnologia em Biotecnologia</string>
    <string name="activity_filtros_item_4">Ciência da Computação</string>
    <string name="activity_filtros_item_5">Análise e Desenvolvimento de Sistemas</string>
    <string name="activity_filtros_item_6">Farmácia</string>
    <string name="activity_filtros_item_7">Produção de Fármacos</string>
    <string name="activity_filtros_item_8">Polímeros</string>
    <string name="activity_filtros_item_9">Construção Naval</string>
    <string name="activity_filtros_item_10">Processos Metalúrgicos</string>
    <string name="activity_filtros_item_11">Engenharia de Produção</string>
    <string name="activity_filtros_check_notifications">Receber notificação para novas publicações</string>

    <string name="activity_post_title">PROF. ALESSANDRO KAPPEL JORDÃO CONTEMPLADO NO EDITAL APQ1/2016</string>
    <string name="activity_post_postado">Postado\t</string>
    <string name="activity_post_data">sábado, 05 de março de 2017</string>
    <string name="activity_post_publicado">Publicado por:</string>
    <string name="activity_post_autor">CAIO CASTRO </string>
    <string name="activity_post_author_description">Aluno do sexto período do curso de Engenharia de Produção na UEZO, voluntário na UEZO Jr. Consultoria e redator no NOTAS APP.</string>
    <string name="activity_post_author_icon_content_description">Foto do autor</string>
    <string name="article">
        \t\t\tLorem ipsum dolor sit amet, consectetur adipiscing elit. In quis magna neque. Ut dictum ex odio, tincidunt fringilla lorem mattis et. Morbi ut velit posuere, porttitor dolor cursus, interdum nisl. Proin vulputate facilisis ante, vel finibus est tincidunt vel. \n
        </string>
</resources>
