<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/backgroundDefaultLight">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_filtro_margin"
            android:text="@string/activity_filtros_description"
            android:textColor="@color/colorTextDefaultDark"
            android:textSize="@dimen/activity_filtro_description_text_size" />

        <CheckBox
            android:id="@+id/checkBoxDeafult1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:text="@string/activity_filtros_check_all"
            android:layout_marginTop="@dimen/activity_filtro_margin"
            android:textSize="@dimen/activity_filtro_checkbox_text_size"
            android:textColor="@color/colorTextDefaultDark"
            android:buttonTint="@color/checkbox_unchecked"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="@dimen/activity_filtro_margin">

            <CheckBox
                android:id="@+id/checkBoxDeafult1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/activity_filtros_item_1"
                android:checked="true"
                android:textSize="@dimen/activity_filtro_checkbox_text_size"
                android:textColor="@color/colorTextDefaultDark"
                android:buttonTint="@color/checkbox_checked"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_thickness"
                android:layout_margin="@dimen/activity_filtro_margin"
                android:background="@color/colorDivider" />

            <CheckBox
                android:id="@+id/checkBoxDeafult1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/activity_filtros_item_2"
                android:checked="false"
                android:textSize="@dimen/activity_filtro_checkbox_text_size"
                android:textColor="@color/colorTextDefaultDark"
                android:buttonTint="@color/checkbox_unchecked"/>

            <CheckBox
                android:id="@+id/checkBoxDeafult1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/activity_filtros_item_3"
                android:checked="false"
                android:textSize="@dimen/activity_filtro_checkbox_text_size"
                android:textColor="@color/colorTextDefaultDark"
                android:buttonTint="@color/checkbox_unchecked"/>

            <CheckBox
                android:id="@+id/checkBoxDeafult1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/activity_filtros_item_4"
                android:checked="false"
                android:textSize="@dimen/activity_filtro_checkbox_text_size"
                android:textColor="@color/colorTextDefaultDark"
                android:buttonTint="@color/checkbox_unchecked"/>

            <CheckBox
                android:id="@+id/checkBoxDeafult1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/activity_filtros_item_5"
                android:checked="false"
                android:textSize="@dimen/activity_filtro_checkbox_text_size"
                android:textColor="@color/colorTextDefaultDark"
                android:buttonTint="@color/checkbox_unchecked"/>

            <CheckBox
                android:id="@+id/checkBoxDeafult1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/activity_filtros_item_6"
                android:checked="false"
                android:textSize="@dimen/activity_filtro_checkbox_text_size"
                android:textColor="@color/colorTextDefaultDark"
                android:buttonTint="@color/checkbox_unchecked"/>

            <CheckBox
                android:id="@+id/checkBoxDeafult1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/activity_filtros_item_7"
                android:checked="false"
                android:textSize="@dimen/activity_filtro_checkbox_text_size"
                android:textColor="@color/colorTextDefaultDark"
                android:buttonTint="@color/checkbox_unchecked"/>

            <CheckBox
                android:id="@+id/checkBoxDeafult1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/activity_filtros_item_8"
                android:checked="false"
                android:textSize="@dimen/activity_filtro_checkbox_text_size"
                android:textColor="@color/colorTextDefaultDark"
                android:buttonTint="@color/checkbox_unchecked"/>

            <CheckBox
                android:id="@+id/checkBoxDeafult1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/activity_filtros_item_9"
                android:checked="false"
                android:textSize="@dimen/activity_filtro_checkbox_text_size"
                android:textColor="@color/colorTextDefaultDark"
                android:buttonTint="@color/checkbox_unchecked"/>

            <CheckBox
                android:id="@+id/checkBoxDeafult1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/activity_filtros_item_10"
                android:checked="false"
                android:textSize="@dimen/activity_filtro_checkbox_text_size"
                android:textColor="@color/colorTextDefaultDark"
                android:buttonTint="@color/checkbox_unchecked"/>

            <CheckBox
                android:id="@+id/checkBoxDeafult1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/activity_filtros_item_11"
                android:checked="true"
                android:textSize="@dimen/activity_filtro_checkbox_text_size"
                android:textColor="@color/colorTextDefaultDark"
                android:buttonTint="@color/checkbox_checked"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_thickness"
            android:background="@color/colorDivider" />

        <CheckBox
            android:id="@+id/checkBoxDeafult1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/activity_filtros_check_notifications"
            android:checked="false"
            android:layout_margin="@dimen/activity_filtro_margin"
            android:textSize="@dimen/activity_filtro_checkbox_text_size"
            android:textColor="@color/colorTextDefaultDark"
            android:buttonTint="@color/checkbox_unchecked"/>
    </LinearLayout>
</android.support.v7.widget.CardView>