<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/backgroundDefaultLight">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--header-->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/post_color_0">

            <!--Header-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_post_margin"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <!--title-->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_post_padding"
                        android:text="@string/activity_post_title"
                        android:textColor="@color/colorTextDefaultLight"
                        android:textSize="@dimen/activity_post_title" />

                    <!--post time-->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/activity_post_postado"
                            android:textColor="@color/colorTextDefaultLight"
                            android:textSize="@dimen/activity_post_time" />

                        <TextView
                            android:id="@+id/data_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/activity_post_data"
                            android:textColor="@color/colorTextDefaultLight"
                            android:textSize="@dimen/activity_post_time" />
                    </LinearLayout>

                </LinearLayout>

                <!-- edit like button-->
                <Button
                    android:id="@+id/like_button"
                    android:layout_width="@dimen/activity_post_like_button_size"
                    android:layout_height="@dimen/activity_post_like_button_size"
                    android:layout_gravity="bottom"
                    android:background="@drawable/heart_liked" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!--post-->
        <LinearLayout
            android:id="@+id/post_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_post_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_post_margin"
                android:text="@string/article"
                android:textColor="@color/cardview_dark_background" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_thickness"
            android:layout_gravity="bottom"
            android:background="@color/colorDivider" />

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/activity_post_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_post_padding"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_post_padding"
                        android:text="@string/activity_post_publicado"
                        android:textColor="@color/colorTextDefaultDark"
                        android:textSize="@dimen/activity_post_author_description_text_size" />

                    <TextView
                        android:id="@+id/author_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_post_padding"
                        android:text="@string/activity_post_autor"
                        android:textColor="@color/colorSecundary"
                        android:textSize="@dimen/activity_post_author_name_size" />

                </LinearLayout>

                <!--author icon-->
                <android.support.v7.widget.CardView
                    android:layout_width="@dimen/activity_post_author_icon_size"
                    android:layout_height="@dimen/activity_post_author_icon_size"
                    android:layout_marginRight="@dimen/activity_post_margin"
                    android:layout_marginEnd="@dimen/activity_post_margin"
                    android:elevation="12dp"
                    android:innerRadius="0dp"
                    android:shape="ring"
                    android:thicknessRatio="3"
                    app:cardCornerRadius="26dp">

                    <ImageView
                        android:id="@+id/author_icon"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:src="@drawable/logo_branca"
                        android:contentDescription="@string/activity_post_author_icon_content_description"></ImageView>
                </android.support.v7.widget.CardView>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/author_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_post_author_description"
                android:textColor="@color/colorTextDefaultDark"
                android:textSize="@dimen/activity_post_author_description_text_size" />

        </LinearLayout>

    </LinearLayout>

    </ScrollView>
</android.support.v7.widget.CardView>


